# liwin

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.bat  build.sh  config.example.toml  config.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: README.md  build.yml  test.yml  windows.yml
pkg/: README.md  liwin.d.ts  liwin.js  liwin_bg.wasm  liwin_bg.wasm.d.ts  package.json
public/: 404.html  CNAME  index.html
src/: app.rs  config.rs  lib.rs
src/components/: button.rs  hello.rs  layout.rs  mod.rs  navbar.rs
src/pages/: about.rs  home.rs  not_found.rs
src/router/: mod.rs
styles/: input.css  output.css
