[package]
name = "liwin"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.2", features = ["web"] }
dioxus-web = "0.6.2"
dioxus-router = "0.6.2"
dioxus-hooks = "0.6.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
gloo-timers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"

[dev-dependencies]
wasm-pack = "0.12"

[lib]
crate-type = ["cdylib", "rlib"] 